BIC and CV model selector

--- a/asl_recognizer.ipynb
+++ b/asl_recognizer.ipynb
@@ -621,74 +621,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "scrolled": true
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([[-11,  48,   7, 120],\n",
-       "        [-11,  48,   8, 109],\n",
-       "        [ -8,  49,  11,  98],\n",
-       "        [ -7,  50,   7,  87],\n",
-       "        [ -4,  54,   7,  77],\n",
-       "        [ -4,  54,   6,  69],\n",
-       "        [ -4,  54,   6,  69],\n",
-       "        [-13,  52,   6,  69],\n",
-       "        [-13,  52,   6,  69],\n",
-       "        [ -8,  51,   6,  69],\n",
-       "        [ -8,  51,   6,  69],\n",
-       "        [ -8,  51,   6,  69],\n",
-       "        [ -8,  51,   6,  69],\n",
-       "        [ -8,  51,   6,  69],\n",
-       "        [-10,  59,   7,  71],\n",
-       "        [-15,  64,   9,  77],\n",
-       "        [-17,  75,  13,  81],\n",
-       "        [ -4,  48,  -4, 113],\n",
-       "        [ -2,  53,  -4, 113],\n",
-       "        [ -4,  55,   2,  98],\n",
-       "        [ -4,  58,   2,  98],\n",
-       "        [ -1,  59,   2,  89],\n",
-       "        [ -1,  59,  -1,  84],\n",
-       "        [ -1,  59,  -1,  84],\n",
-       "        [ -7,  63,  -1,  84],\n",
-       "        [ -7,  63,  -1,  84],\n",
-       "        [ -7,  63,   3,  83],\n",
-       "        [ -7,  63,   3,  83],\n",
-       "        [ -7,  63,   3,  83],\n",
-       "        [ -7,  63,   3,  83],\n",
-       "        [ -7,  63,   3,  83],\n",
-       "        [ -7,  63,   3,  83],\n",
-       "        [ -7,  63,   3,  83],\n",
-       "        [ -4,  70,   3,  83],\n",
-       "        [ -4,  70,   3,  83],\n",
-       "        [ -2,  73,   5,  90],\n",
-       "        [ -3,  79,  -4,  96],\n",
-       "        [-15,  98,  13, 135],\n",
-       "        [ -6,  93,  12, 128],\n",
-       "        [ -2,  89,  14, 118],\n",
-       "        [  5,  90,  10, 108],\n",
-       "        [  4,  86,   7, 105],\n",
-       "        [  4,  86,   7, 105],\n",
-       "        [  4,  86,  13, 100],\n",
-       "        [ -3,  82,  14,  96],\n",
-       "        [ -3,  82,  14,  96],\n",
-       "        [  6,  89,  16, 100],\n",
-       "        [  6,  89,  16, 100],\n",
-       "        [  7,  85,  17, 111]]), [17, 20, 12])"
+       "[[[-19, 38, 27, 89],\n",
+       "  [-19, 38, 23, 89],\n",
+       "  [-15, 39, 24, 92],\n",
+       "  [-12, 33, 24, 92],\n",
+       "  [-12, 33, 24, 92],\n",
+       "  [-9, 32, 24, 92],\n",
+       "  [-10, 29, 21, 93],\n",
+       "  [-10, 29, 20, 94],\n",
+       "  [-10, 29, 20, 94],\n",
+       "  [-10, 29, 20, 94],\n",
+       "  [-10, 29, 20, 94],\n",
+       "  [-10, 29, 20, 98],\n",
+       "  [-10, 29, 20, 98],\n",
+       "  [-8, 34, 20, 98],\n",
+       "  [-8, 34, 13, 104]],\n",
+       " [[-19, 35, 29, 75],\n",
+       "  [-19, 35, 29, 75],\n",
+       "  [-19, 35, 29, 75],\n",
+       "  [-19, 35, 25, 79],\n",
+       "  [-19, 35, 22, 80],\n",
+       "  [-14, 32, 21, 86],\n",
+       "  [-14, 32, 21, 86],\n",
+       "  [-14, 32, 14, 90],\n",
+       "  [-12, 32, 16, 90],\n",
+       "  [-12, 32, 16, 92],\n",
+       "  [-12, 32, 15, 94],\n",
+       "  [-12, 32, 15, 94],\n",
+       "  [-12, 32, 15, 94],\n",
+       "  [-12, 32, 15, 94],\n",
+       "  [-12, 32, 15, 97],\n",
+       "  [-10, 35, 15, 101],\n",
+       "  [-6, 41, 11, 104]]]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "training.get_word_Xlengths('CHOCOLATE')"
+    "training.get_word_sequences('CHICKEN')"
    ]
   },
   {
@@ -1163,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1236,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1272,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1317,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1358,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1371,7 +1355,7 @@
      "text": [
       "....\n",
       "----------------------------------------------------------------------\n",
-      "Ran 4 tests in 0.013s\n",
+      "Ran 4 tests in 0.021s\n",
       "\n",
       "OK\n"
      ]
@@ -1382,7 +1366,7 @@
        "<unittest.runner.TextTestResult run=4 errors=0 failures=0>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1445,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1457,7 +1441,7 @@
      "output_type": "stream",
      "text": [
       "Number of states trained in model for BOOK is 3\n",
-      "logL = -2331.1138127433196\n"
+      "logL = -2331.113812743319\n"
      ]
     }
    ],
@@ -1492,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1505,12 +1489,12 @@
      "text": [
       "Number of states trained in model for BOOK is 3\n",
       "hidden state #0\n",
-      "mean =  [ -11.45300909   94.109178     19.03512475  102.2030162 ]\n",
-      "variance =  [  77.403668    203.35441965   26.68898447  156.12444034]\n",
-      "\n",
-      "hidden state #1\n",
       "mean =  [ -3.46504869  50.66686933  14.02391587  52.04731066]\n",
       "variance =  [ 49.12346305  43.04799144  39.35109609  47.24195772]\n",
+      "\n",
+      "hidden state #1\n",
+      "mean =  [ -11.45300909   94.109178     19.03512475  102.2030162 ]\n",
+      "variance =  [  77.403668    203.35441965   26.68898447  156.12444034]\n",
       "\n",
       "hidden state #2\n",
       "mean =  [ -1.12415027  69.44164191  17.02866283  77.7231196 ]\n",
@@ -1545,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1558,24 +1542,24 @@
      "text": [
       "Number of states trained in model for CHOCOLATE is 3\n",
       "hidden state #0\n",
-      "mean =  [ -9.30211403  55.32333876   6.92259936  71.24057775]\n",
-      "variance =  [ 16.16920957  46.50917372   3.81388185  15.79446427]\n",
+      "mean =  [ 2.26955318 -0.2690072  -0.67005544 -9.1341518 ]\n",
+      "variance =  [  9.26031519   7.66293533   7.67530134  15.28076516]\n",
       "\n",
       "hidden state #1\n",
-      "mean =  [   0.58333333   87.91666667   12.75        108.5       ]\n",
-      "variance =  [  39.41055556   18.74388889    9.855       144.4175    ]\n",
+      "mean =  [-0.54151701 -0.13549492  0.          0.        ]\n",
+      "variance =  [  7.40033314e+00   2.07610444e-01   4.54757788e-04   4.54757788e-04]\n",
       "\n",
       "hidden state #2\n",
-      "mean =  [ -5.40587658  60.1652424    2.32479599  91.3095432 ]\n",
-      "variance =  [   7.95073876   64.13103127   13.68077479  129.5912395 ]\n",
+      "mean =  [ 0.07434035  4.32590509  1.08475329  2.81908645]\n",
+      "variance =  [ 14.12290048  15.39826602  12.40214192  17.46963045]\n",
       "\n",
-      "logL = -601.3291470028641\n"
+      "logL = -256.56151832675334\n"
      ]
     }
    ],
    "source": [
     "my_testword = 'CHOCOLATE'\n",
-    "model, logL = train_a_word(my_testword, 3, features_ground) # Experiment here with different parameters\n",
+    "model, logL = train_a_word(my_testword, 3, features_delta) # Experiment here with different parameters\n",
     "show_model_stats(my_testword, model)\n",
     "print(\"logL = {}\".format(logL))"
    ]
@@ -1593,22 +1577,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/TimMacPro/anaconda/envs/aind/lib/python3.6/site-packages/matplotlib/font_manager.py:280: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
-      "  'Matplotlib is building the font cache using fc-list. '\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline"
    ]
@@ -1814,7 +1789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1828,7 +1803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1843,13 +1818,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training complete for FISH with 4 states with time 0.07770625320063118 seconds\n",
+      "Training complete for BOOK with 14 states with time 3.1832841009263575 seconds\n",
+      "Training complete for VEGETABLE with 13 states with time 1.1970295022310893 seconds\n",
+      "Training complete for FUTURE with 14 states with time 3.1485479861976273 seconds\n",
+      "Training complete for JOHN with 14 states with time 31.170030168215817 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Implement SelectorCV in my_model_selector.py\n",
     "from my_model_selectors import SelectorCV\n",
@@ -1870,13 +1857,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training complete for FISH with 6 states with time 0.09727613477298291 seconds\n",
+      "Training complete for BOOK with 12 states with time 1.6713140176343586 seconds\n",
+      "Training complete for VEGETABLE with 14 states with time 0.6325746153252112 seconds\n",
+      "Training complete for FUTURE with 14 states with time 2.014529441279592 seconds\n",
+      "Training complete for JOHN with 14 states with time 18.398392397251882 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Implement SelectorBIC in module my_model_selectors.py\n",
     "from my_model_selectors import SelectorBIC\n",
@@ -1948,13 +1947,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "E\n",
+      "======================================================================\n",
+      "ERROR: test_select_cv_interface (asl_test_model_selectors.TestSelectors)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"D:\\exp\\aind\\sign-language\\asl_test_model_selectors.py\", line 32, in test_select_cv_interface\n",
+      "    model = SelectorCV(self.sequences, self.xlengths, 'CHICKEN').select()\n",
+      "  File \"D:\\exp\\aind\\sign-language\\my_model_selectors.py\", line 142, in select\n",
+      "    logL = hmm_model.score(test_squences_x, test_squences_lengths)\n",
+      "  File \"C:\\ProgramData\\Anaconda3\\envs\\aind\\lib\\site-packages\\hmmlearn\\base.py\", line 243, in score\n",
+      "    self._check()\n",
+      "  File \"C:\\ProgramData\\Anaconda3\\envs\\aind\\lib\\site-packages\\hmmlearn\\hmm.py\", line 180, in _check\n",
+      "    super(GaussianHMM, self)._check()\n",
+      "  File \"C:\\ProgramData\\Anaconda3\\envs\\aind\\lib\\site-packages\\hmmlearn\\base.py\", line 527, in _check\n",
+      "    .format(self.transmat_.sum(axis=1)))\n",
+      "ValueError: rows of transmat_ must sum to 1.0 (got [ 1.  1.  0.])\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 3.234s\n",
+      "\n",
+      "FAILED (errors=1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.runner.TextTestResult run=1 errors=1 failures=0>"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from asl_test_model_selectors import TestSelectors\n",
     "suite = unittest.TestLoader().loadTestsFromModule(TestSelectors())\n",
