--- a/asl_recognizer.ipynb
+++ b/asl_recognizer.ipynb
@@ -2119,7 +2119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -2136,13 +2136,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "**** WER = 0.6685393258426966\n",
+      "Total correct: 59 out of 178\n",
+      "Video  Recognized                                                    Correct\n",
+      "=====================================================================================================\n",
+      "    2: *GO WRITE *ARRIVE                                             JOHN WRITE HOMEWORK\n",
+      "    7: *SOMETHING-ONE *GO1 *IX CAN                                   JOHN CAN GO CAN\n",
+      "   12: JOHN *HAVE *WHAT CAN                                          JOHN CAN GO CAN\n",
+      "   21: JOHN *HOMEWORK *NEW *PREFER *CAR *CAR *FUTURE *EAT            JOHN FISH WONT EAT BUT CAN EAT CHICKEN\n",
+      "   25: *FRANK *TELL *LOVE *TELL *LOVE                                JOHN LIKE IX IX IX\n",
+      "   28: *FRANK *TELL *LOVE *TELL *LOVE                                JOHN LIKE IX IX IX\n",
+      "   30: *SHOULD LIKE *GO *GO *GO                                      JOHN LIKE IX IX IX\n",
+      "   36: *VISIT VEGETABLE *YESTERDAY *GIVE *MARY *MARY                 MARY VEGETABLE KNOW IX LIKE CORN1\n",
+      "   40: *SUE *GIVE *CORN *VEGETABLE *GO                               JOHN IX THINK MARY LOVE\n",
+      "   43: *FRANK *GO BUY HOUSE                                          JOHN MUST BUY HOUSE\n",
+      "   50: *FRANK *SEE BUY CAR *SOMETHING-ONE                            FUTURE JOHN BUY CAR SHOULD\n",
+      "   54: JOHN SHOULD *WHO BUY HOUSE                                    JOHN SHOULD NOT BUY HOUSE\n",
+      "   57: *MARY *VISIT VISIT *VISIT                                     JOHN DECIDE VISIT MARY\n",
+      "   67: *LIKE FUTURE NOT BUY HOUSE                                    JOHN FUTURE NOT BUY HOUSE\n",
+      "   71: JOHN *FINISH VISIT MARY                                       JOHN WILL VISIT MARY\n",
+      "   74: *IX *VISIT *GO *GO                                            JOHN NOT VISIT MARY\n",
+      "   77: *JOHN BLAME *LOVE                                             ANN BLAME MARY\n",
+      "   84: *LOVE *ARRIVE *HOMEWORK BOOK                                  IX-1P FIND SOMETHING-ONE BOOK\n",
+      "   89: *GIVE *GIVE GIVE *IX IX *ARRIVE *BOOK                         JOHN IX GIVE MAN IX NEW COAT\n",
+      "   90: *SOMETHING-ONE *SOMETHING-ONE IX *IX WOMAN *COAT              JOHN GIVE IX SOMETHING-ONE WOMAN BOOK\n",
+      "   92: *FRANK GIVE *WOMAN *WOMAN WOMAN BOOK                          JOHN GIVE IX SOMETHING-ONE WOMAN BOOK\n",
+      "  100: POSS NEW CAR BREAK-DOWN                                       POSS NEW CAR BREAK-DOWN\n",
+      "  105: *FRANK *VEGETABLE                                             JOHN LEG\n",
+      "  107: *SHOULD *IX FRIEND *GO *JANA                                  JOHN POSS FRIEND HAVE CANDY\n",
+      "  108: *GIVE *LOVE                                                   WOMAN ARRIVE\n",
+      "  113: IX CAR *CAR *IX *IX                                           IX CAR BLUE SUE BUY\n",
+      "  119: *PREFER *BUY1 IX *BLAME *IX                                   SUE BUY IX CAR BLUE\n",
+      "  122: JOHN *GIVE1 *COAT                                             JOHN READ BOOK\n",
+      "  139: *SHOULD *BUY1 *CAR *BLAME BOOK                                JOHN BUY WHAT YESTERDAY BOOK\n",
+      "  142: *FRANK *STUDENT YESTERDAY *TEACHER BOOK                       JOHN BUY YESTERDAY WHAT BOOK\n",
+      "  158: LOVE *MARY WHO                                                LOVE JOHN WHO\n",
+      "  167: *MARY IX *VISIT *WOMAN *LOVE                                  JOHN IX SAY LOVE MARY\n",
+      "  171: *VISIT *VISIT BLAME                                           JOHN MARY BLAME\n",
+      "  174: *CAN *GIVE3 GIVE1 *APPLE *WHAT                                PEOPLE GROUP GIVE1 JANA TOY\n",
+      "  181: *BLAME ARRIVE                                                 JOHN ARRIVE\n",
+      "  184: *GIVE1 BOY *GIVE1 TEACHER APPLE                               ALL BOY GIVE TEACHER APPLE\n",
+      "  189: *JANA *SOMETHING-ONE *YESTERDAY *WHAT                         JOHN GIVE GIRL BOX\n",
+      "  193: JOHN *SOMETHING-ONE *YESTERDAY BOX                            JOHN GIVE GIRL BOX\n",
+      "  199: *LOVE CHOCOLATE WHO                                           LIKE CHOCOLATE WHO\n",
+      "  201: JOHN *GIVE *GIVE *LOVE *ARRIVE HOUSE                          JOHN TELL MARY IX-1P BUY HOUSE\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO Choose a feature set and model selector\n",
     "features = features_ground # change as needed\n",
@@ -2209,13 +2261,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "..\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 2 tests in 26.595s\n",
+      "\n",
+      "OK\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.runner.TextTestResult run=2 errors=0 failures=0>"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from asl_test_recognizer import TestRecognize\n",
     "suite = unittest.TestLoader().loadTestsFromModule(TestRecognize())\n",
